components/EventCard/style/styles.module.css
.event_card_container {
    display: flex;
    margin: 30px 10px 30px 0;
    cursor: pointer;
}

#event_item {
    margin-bottom: 5px;
}

.event_card_img {
    border-radius: 50%;
    min-width: 100px;
    width: 100px;
    height: 100px;
    object-fit: contain;
    margin-right: 20px;
}

.event_card_info_container {
    display: flex;
    flex-direction: column;
    padding-right: 10%;
}

.event_type {
    padding-left: 5px;
}

.event_copy {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    margin-bottom: 5px;
}

.event_hr {
    border-style: dashed;
    border-color: #F0F0F0;
    border-width: 0 0 1px 0;
    width: 100%;
    height: 1px;
    margin-left: 0;
}

.button {
    height: fit-content;
    align-self: center;
    margin-left: 20px;
}

.event_hr_mobile {
    visibility: hidden;
    width: 0;
    height: 0;

}

@media screen and (max-width: 1180px) {
    .event_card_info_container {
        width: 60%
    }

    .button {
        height: fit-content;
        align-self: center;
        margin-left: 20px;
    }

    .event_card_info_container {
        padding-right: 5%;
    }
}

@media screen and (max-width: 950px) {
    .event_card_info_container {
        width: 50%
    }

    .button {
        height: fit-content;
        align-self: center;
        margin-left: 20px;
    }
}

@media screen and (max-width: 820px) {


    .event_card_info_container {
        width: 100%
    }

    .button {
        height: 0;
        width: 0;
        display: none;
        visibility: hidden;
    }

    .event_hr {
        height: 0;
        widows: 0;
        display: none;
        visibility: hidden;
    }

    .event_card_img {
        width: 85px;
        height: 85px;
        margin-right: 15px;
    }

}

@media screen and (max-width: 600px) {
    .event_card_container {
        width: 100%
    }

    .event_card_info_container {
        width: 100%
    }

    .button {
        height: 0;
        width: 0;
        display: none;
        visibility: hidden;
    }

}

